# Projects

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  frontend.py  requirements.txt
2026_ite2031_2022065250/: README.md
2026_ite2031_2022065250/project1/: assembler.c
CA_projects/project1/: assembler  assembler.c  spec.as  spec.mc.correct  test1.as  test3.as  test4.as  test4.mc
CA_projects/project2/: loader.c  mem.c  mem.h  simulator.c  spec.out.correct
CA_projects/project3/: alu.h  control.c  forward.c  forward.h  hazard.c  mem.h  pipeline.h  simulator.c  simulator.h  spec.mc  spec.out.correct  test1.as  test10.as  test11.as  test11.mc  test12.as  test12.mc  test13.mc  test14.mc  test15.as  test15.mc  test16.as  test17.mc  test18.as  test18.mc  test19.as  test19.mc  test2.as  test2.mc  test20.as  test20.mc  test21.as  test23.as  test23.mc  test24.as  test24.mc  test3.as  test3.mc  test4.as  test4.mc  (+8 more)
FinancialEngine/: CMakeLists.txt  README.md  cointegration_test.py  data_pipeline.py  generate_parameters.py  greeks_test.py  live_stream.py  main.py  mm_test.py  obi_test.py  optimize_pairs.py  optimizer_test.py  pairs_trading_test.py  pca_backtest.py  regime_test.py  test_analytics.py  test_backtester.py  test_script.py  visualize_demo.py  vpin_test.py  vwap_test.py
FinancialEngine/include/: AntiThetic.h  Backtester.h  BinomialTree.h  Bisection.h  BlackScholesFormulas.h  ExoticBSEngine.h  HyperOptimizer.h  KalmanFilter.h  MCStatistics.h  MetaManager.h  NumericalGreeks.h  Optimizer.h  OrderBook.h  PCAArbitrage.h  PairSelector.h  Parameters.h  PathDependent.h  PathDependentAsian.h  Payoff.h  PayoffFactory.h  RiskManager.h  SimpleMC.h  Strategy.h
FinancialEngine/market_data_feeder/: Cargo.toml
FinancialEngine/market_data_feeder/src/: main.rs
FinancialEngine/research/: portfolio_opt.py  risk_metrics.py  volatility.py
FinancialEngine/server/: main.py
FinancialEngine/src/: Analytics.cpp  AntiThetic.cpp  Backtester.cpp  BinomialTree.cpp  BlackScholesFormulas.cpp  CMakeLists.txt  ConvergenceTable.cpp  MCStatistics.cpp  Optimizer.cpp  OrderBook.cpp  Parameters.cpp  PathDependent.cpp  Payoff.cpp  PayoffRegistration.cpp  Random.cpp  RegimeDetector.cpp  SimpleMC.cpp  VanillaOption.cpp  main.cpp
FinancialEngine/tests/: AntiTheticTest.cpp  CMakeLists.txt  ConvergenceTest.cpp  FactoryTest.cpp  GreeksTest.cpp  PayoffTest.cpp  SolverTest.cpp
Financial_OS/: .gitignore  adaptive_backtest.py  dashboard.py  pca_test.py  real_world_test.py  test_optimizer.py
Financial_OS/include/: Analytics.h  VanillaOption.h
Financial_OS/src/: Bindings.cpp  PairSelector.cpp  PathDependentAsian.cpp
Financial_OS/tests/: TreeTest.cpp
OS_projects/OS_assignment/kernel/: trampoline.S
OS_projects/OS_assignment/user/: user.ld
OS_projects/OS_project03/kernel/: sysfile.c
Projects (Computer_Architecture)/project1/: test1.mc  test2.as  test2.mc  test3.mc  test5.as  test5.mc
Projects (Computer_Architecture)/project2/: Makefile  loader.h  simulator.h
Projects (Computer_Architecture)/project3/: Makefile  alu.c  control.h  hazard.h  loader.c  mem.c  pipeline.c  reg_file.c  reg_file.h  test1.mc  test10.mc  test13.as  test14.as  test16.mc  test17.as  test21.mc  test22.as  test22.mc  test5.as  test6.as
Projects (Operating System)/assignment/kernel/: vm.c
Projects (Operating System)/project2/kernel/: proc.h
Projects (Operating System)/project3/kernel/: fs.c  kalloc.c
QuantLab/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  requirements.txt  run_bot.py
QuantLab/src/: bot.py  data_loader.py  feature_eng.py  notifier.py  strategy.py  strategy_bb.py  strategy_rsi.py  visualizer.py
Settlo/: .gitignore  Dockerfile.backend  alembic.ini
Settlo/alembic/: env.py
Settlo/alembic/versions/: 6c426a5bd568_initial_tables.py  (+1 more)
Settlo/app/: models.py  schemas.py
aegis/: CMakeLists.txt
aegis/alpha/: pyproject.toml
aegis/core/: CMakeLists.txt
aegis/core/include/aegis/gateway/: exchange_gateway.hpp
aegis/core/src/: main.cpp
aegis/gateway/: CMakeLists.txt
aegis/gateway/include/aegis/gateway/: binance_gateway.hpp
aegis/gateway/src/: binance_gateway.cpp
aegis/pipeline/: CMakeLists.txt
aegis/pipeline/include/pipeline/: kafka_producer.hpp
aegis/pipeline/src/: kafka_producer.cpp
app/: database.py  main.py  models.py  schemas.py  services.py
assignment/: .clangd  .gitignore  Makefile  README
assignment/kernel/: console.c  defs.h  exec.c  file.c  fs.c  memlayout.h  ppid_syscall.c  proc.c  start.c  syscall.c  syscall.h  sysfile.c  sysproc.c  trap.c  uart.c
assignment/user/: forphan.c  grind.c  logstress.c  ps.c  user.h  usertests.c  usys.pl
financial_engine/: gamma_scalping_test.py  live_stream_udp.py  optimize_strategy.py  test_api_full.py  universe_mining_test.py
financial_engine/include/: ConvergenceTable.h  NewtonRaphson.h  Random.h  RegimeDetector.h
financial_engine/src/: ExoticBSEngine.cpp  PCAArbitrage.cpp  PayoffFactory.cpp
financial_engine/tests/: ExoticEngineTest.cpp  SimpleMCTest.cpp
graduate/: .gitignore  CLAUDE.md  benchmark_cifar10.py  make_report.py  muon.py  muon_sam.py  test_muon_sam.py
os_projects/assignment/: test-xv6.py
project01/kernel/: proc.c  proc.h
project01/user/: usys.pl
project02/: Makefile
project02-2022065250/kernel/: exec.c  proc.c  syscall.c
project02-2022065250/user/: thread.h
project02/user/: thread.c  thread_test.c  user.h  usys.pl
project03/kernel/: vm.c
project03/user/: symlinktest.c
quantsuite/: .gitignore  README.md
quantsuite/apps/backtester-cpp/: CMakeLists.txt
quantsuite/apps/backtester-cpp/src/: main.cpp  metrics.cpp  metrics.hpp  output.json  output_rsi.json  strategy.cpp  strategy.hpp
stock-tracker/: .gitignore  README.md
stock-tracker/client/: package-lock.json  package.json  vercel.json
stock-tracker/server/: app.js  index.js  jest.setup.js  package-lock.json  package.json  requests.http
url-shortener/: .gitignore  README.md
url-shortener/client/: package-lock.json  package.json
url-shortener/server/: index.js  package-lock.json  package.json
(+66 files in other folders)
